# Warehouse_Manager

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  product.cpp  product.h  tablemodel.cpp  tablemodel.h
Test/: CMakeLists.txt  tst_product.cpp  tst_tablemodel.cpp
build-Test-Desktop_Qt_5_15_2_clang_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
build-Test-Qt_6_7_3_for_macOS-Debug/: CMakeCache.txt  qtcsettings.cmake
